--- a/package.json
+++ b/package.json
@@ -7,27 +7,34 @@
     "start": "nodemon src/index.ts",
     "build": "npx tsc",
     "jasmine": "jasmine",
-    "test": "npm run build && npm run jasmine"
+    "test": "npm run build && npm run jasmine",
+    "eslint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "flat-cache": "^3.0.4",
+    "is-valid-path": "^0.1.1",
     "jasmine": "^3.7.0",
     "jasmine-spec-reporter": "^7.0.0",
     "sharp": "^0.28.1",
     "supertest": "^6.1.3"
   },
   "devDependencies": {
-    "@types/jasmine": "^3.6.9",
     "@types/csvtojson": "^1.1.5",
     "@types/express": "^4.17.8",
-    "@types/node": "^14.14.37",
-    "@types/supertest": "^2.0.11",
     "@types/flat-cache": "^2.0.0",
+    "@types/is-valid-path": "^0.1.0",
+    "@types/jasmine": "^3.6.9",
+    "@types/node": "^14.14.37",
     "@types/sharp": "^0.28.0",
+    "@types/supertest": "^2.0.11",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "nodemon": "^2.0.6",
+    "prettier": "^1.18.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
