--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "npx tsc",
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
-    "eslint": "eslint ."
+    "eslint": "eslint . --ext .ts",
+    "eslint-and-fix": "eslint . --ext .ts --fix",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +32,8 @@
     "@types/node": "^14.14.37",
     "@types/sharp": "^0.28.0",
     "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.1",
